# snake

./: .gitignore  AGENTS.md  CLAUDE.md  PERFORMANCE_AUDIT.md  README.md  build.zig  pyproject.toml
bench/: bench.py  cli_style.py  llm_bench.py  llm_kernels.py  micro_reduce.py
bench/fixtures/: bpe_demo.json  tokenizer_corpus.txt  tokenizer_merges.txt  tokenizer_vocab.json
docs/: architecture.md  argmax_softmax_optimizations.md  benchmarks.md  roadmap.md
python/snake/: __init__.py  _core.py
src/: snake.zig
src/kernels/: activations.zig  activations_test.zig  histogram.zig  kernels.zig  prefix.zig  reductions.zig  transforms.zig
src/simd/: reduce.zig  simd.zig
src/threading/: threading.zig
tests/: test_snake.py  test_zigops.py
