[project]
name = "snake"
version = "0.1.0"
description = "High-performance numeric kernels written in Zig for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["zig", "numpy", "simd", "performance", "numeric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

dependencies = ["numpy>=1.24.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pyperf>=2.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/snake"]

# ============================================================================
# Dependency groups (used by uv)
# ============================================================================
[dependency-groups]
dev = ["ruff>=0.9", "ty>=0.0.1a7", "pytest>=8.0", "pyperf>=2.6"]

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["python"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["snake"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# ty (type checker) configuration
# ============================================================================
[tool.ty.environment]
python-version = "3.10"
